bug fix for hover btns not showing on desktop

--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,45 @@ body {
   width: 0px;
   background: transparent; }
 
+.hover-btn-container {
+  visibility: visible;
+  position: fixed; }
+  .hover-btn-container.hover-btn-container-desktop {
+    z-index: 1000;
+    bottom: 50px;
+    right: 50px; }
+    @media (max-width: 768px) {
+      .hover-btn-container.hover-btn-container-desktop {
+        display: none; } }
+
+.hover-btn {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  box-shadow: 0px 8px 20px -2px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  transition: 0.6s; }
+  .hover-btn:hover {
+    transform: scale(1.1); }
+  .hover-btn.scroll-top-btn {
+    margin-bottom: 12px;
+    background: #2473A6;
+    background-image: url("../assets/icons/arrow-up.svg");
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 18px; }
+  .hover-btn.contact-btn {
+    background: #5C5C5C;
+    background-image: url("../assets/icons/mail.svg");
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: 11px;
+    background-size: 24px; }
+    .hover-btn.contact-btn a {
+      display: block;
+      height: 100%; }
+
 .contact-template {
   height: 400px;
   position: relative; }
